Code quality improve for bbb-common-web project.